@@ -5,6 +5,7 @@
 	* Fixed bug #2357: "Max filesize allowed (kb)" cannot be changed
 	* Fixed bug #6479: wrong field names for localization
 	* Fixed bug #4974: Enlarge Description field to a textarea
+	* Fixed bug #9272: Remove clear.gif from BE module generation
 	* Fixed bug #9240: Value of default_sortby is TCA ctrl section is wrapped with double quotes
 
 2008-11-04 Peter Foerger	<p.foerger@vke-design.de>
